mouse over on full view state machine is more lenient.

--- a/WebGUI/html/StateMachine.html
+++ b/WebGUI/html/StateMachine.html
@@ -222,8 +222,8 @@
 			var _PARAMETER_SETUP_MAX_HEIGHT = 100; 
 			var _PARAMETER_SETUP_WIDTH = 260; 
 			
-			var _EXTRAS_WIDTH = 200; 
-			var _EXTRAS_HEIGHT = 120;//80; 
+			var _EXTRAS_WIDTH = 220; 
+			var _EXTRAS_HEIGHT = 80; 
 			
 			var _ALARM_WIDTH = 200; 
 			var _ALARM_HEIGHT = 120; 
@@ -2089,7 +2089,7 @@
 	<div id='time-elapsed'></div>
 	<a href='Javascript:showAlarmSetup(1);' title='Setup the Alarm'>Setup Alarm</a>		
 		
-	<br><br>
+	&nbsp; &nbsp;&nbsp; &nbsp;  
 	<a id='view-mode-select' href='Javascript:toggleViewMode();' title='Toggle State Machine View Mode'>View Full State Machine</a>
 </div>
 		
