checkpoint. Group comments functionality growing - can save and view group comments.

--- a/WebGUI/html/ConfigurationGUI_subset.html
+++ b/WebGUI/html/ConfigurationGUI_subset.html
@@ -348,6 +348,7 @@
 		
 			//popUpClearTemporaryVersionsPrompt(backLinkStr)
 			//popUpSaveNewTableForm()
+			//popUpSaveNewGroupForm()
 			//popUpGroupAliasForm(isLatest, myAlias)
 			//popUpVersionAliasForm()
 			//popUpVersionAliasGroupEditorForm()
@@ -437,6 +438,7 @@
 			//setupSpecificConfig("XDAQContextConfiguration","10","setupTableViewMode('anchorTag-XDAQContextConfiguration');"); return;
 
 			//setupSpecificConfigGroup("artdaqFclTest","46","","anchorTag-RawDataSaverConsumerConfiguration"); return;			
+			setupSpecificConfigGroup("testContext","5"); return;
 			
 			//setupConfigCreator(); return
 			
