--- a/WebGUI/html/ConfigurationGUI_subset.html
+++ b/WebGUI/html/ConfigurationGUI_subset.html
@@ -171,7 +171,7 @@
 		//		<baseTable> = Records from this table are the target of this GUI, e.g. “FEInterfaceConfiguration”
 		//		<subLevelGrouping> = CSV list of tree paths relative to <baseTable>, e.g. “LinkToFETypeConfiguration,FEInterfacePluginName”
 		//		<fieldList> = empty string or "DEFAULT" for all, or CSV list of fields to show for editing
-		//		
+		//		<forceSubLevelBase> = CSV list (of forced filter) of tree paths relative to <baseTable> and = value, e.g. "LinkToFETypeConfiguration=NIMPlus,FEInterfacePluginName=NIMPlusPlugin"
 		//	- Requires user to have LOCK
 		//	
 		//	- Split window into two panes: Left and Right; Left is fixed width and hideable.	
