checkpoint with config API. now can fully save modified tables and return handler completes.

--- a/WebGUI/html/ConfigurationGUI_subset.html
+++ b/WebGUI/html/ConfigurationGUI_subset.html
@@ -220,7 +220,7 @@
 				
 				if(saveAll)
 					ConfigurationAPI.popUpSaveModifiedTablesForm(localModifiedTables,
-							function(newTables)
+							function(newTables, newGroups, newAliases)
 							{
 					if(newTables.length)
 						Debug.log("Done with saving.");
