the artdaq_database overwrite features has now been fully leveraged as the Scratch view concept.

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -4376,6 +4376,8 @@
 				el.innerHTML = "Failed.";
 				return;
 			}
+			
+			activateSystemConfigHandler(req);
 		
 			var backLinkStr = "";		
 			//if backLinkStr is present parse it out
