Working at the testbeam with strips

--- a/WebGUI/html/StateMachine.html
+++ b/WebGUI/html/StateMachine.html
@@ -67,6 +67,7 @@
 				color: white;
 				text-decoration: none;
 				font-weight: 800;
+				letter-spacing: -1px; /* for firefox old versions */
 			}
 			
 			#parameter-setup a:hover, #extras-box a:hover, #alarm-setup-box a:hover,
@@ -2089,7 +2090,7 @@
 	<div id='time-elapsed'></div>
 	<a href='Javascript:showAlarmSetup(1);' title='Setup the Alarm'>Setup Alarm</a>		
 		
-	&nbsp; &nbsp;&nbsp; &nbsp;  
+	&nbsp;&nbsp;&nbsp;&nbsp;
 	<a id='view-mode-select' href='Javascript:toggleViewMode();' title='Toggle State Machine View Mode'>View Full State Machine</a>
 </div>
 		
