checkpoint working on bitmap, fixing bug that Alex and Ben found with apos in table cells

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -6446,10 +6446,10 @@
 			el.style.display = "none";
 
 			//set position and size
-			ConfigurationAPI.setPopUpPosition(el,380 /*w*/,215 /*h*/);
+			var w = 380;
+			var h = 215;
+			ConfigurationAPI.setPopUpPosition(el,w /*w*/,h /*h*/);
 			
-//			var w = 380;
-//			var h = 215;
 //			var ww = DesktopContent.getWindowWidth();
 //			var wh = DesktopContent.getWindowHeight();
 //			el.style.top = (DesktopContent.getWindowScrollTop() + ((wh-h-2)/2)) + "px"; 
@@ -6660,9 +6660,9 @@
 
 			//set position and size
 			var gh = 50;
-			ConfigurationAPI.setPopUpPosition(el,380 /*w*/,330-gh*2 /*h*/);
-//			var w = 380;
-//			var h = 330;
+			var w = 380;
+			var h = 330;
+			ConfigurationAPI.setPopUpPosition(el,w /*w*/,h-gh*2 /*h*/);
 //			var gh = 50;
 //			var ww = DesktopContent.getWindowWidth();
 //			var wh = DesktopContent.getWindowHeight();
@@ -9380,9 +9380,9 @@
 			el.style.display = "none";
 
 			//set position and size
-			ConfigurationAPI.setPopUpPosition(el,300 /*w*/,200 /*h*/);
-//			var w = 300;
-//			var h = 200;
+			var w = 300;
+			var h = 200;
+			ConfigurationAPI.setPopUpPosition(el,w /*w*/,h /*h*/);
 //			var ww = DesktopContent.getWindowWidth();
 //			var wh = DesktopContent.getWindowHeight();
 //			el.style.top = (DesktopContent.getWindowScrollTop() + ((wh-h-2)/2)) + "px";
@@ -9446,9 +9446,10 @@
 			el.style.display = "none";
 
 			//set position and size
-			ConfigurationAPI.setPopUpPosition(el,300 /*w*/,200 /*h*/);
-//			var w = 300;
-//			var h = 200;
+			var w = 300;
+			var h = 200;
+			ConfigurationAPI.setPopUpPosition(el,w /*w*/,h /*h*/);
+
 //			var ww = DesktopContent.getWindowWidth();
 //			var wh = DesktopContent.getWindowHeight();
 //			el.style.top = (DesktopContent.getWindowScrollTop() + ((wh-h-2)/2)) + "px";
@@ -9509,9 +9510,10 @@
 			el.style.display = "none";
 
 			//set position and size
-			ConfigurationAPI.setPopUpPosition(el,300 /*w*/,200 /*h*/);
-//			var w = 300;
-//			var h = 200;
+			var w = 300;
+			var h = 200;
+			ConfigurationAPI.setPopUpPosition(el,w /*w*/,h /*h*/);
+			
 //			var ww = DesktopContent.getWindowWidth();
 //			var wh = DesktopContent.getWindowHeight();
 //			el.style.top = (DesktopContent.getWindowScrollTop() + ((wh-h-2)/2)) + "px";
@@ -9568,7 +9570,9 @@
 			}
 
 			//set position and size
-			ConfigurationAPI.setPopUpPosition(el,300 /*w*/,170 /*h*/);
+			var w = 300;
+			var h = 170;
+			ConfigurationAPI.setPopUpPosition(el,w /*w*/,h /*h*/);
 //			var w = 300;
 //			var h = 170;
 //			var ww = DesktopContent.getWindowWidth();
@@ -9662,9 +9666,10 @@
 			
 			//set position and size
 			var gh = 50;
-			ConfigurationAPI.setPopUpPosition(el,500 /*w*/,425-gh*2 /*h*/);
-//			var w = 500;
-//			var h = 425;
+			var w = 500;
+			var h = 425;
+			ConfigurationAPI.setPopUpPosition(el,w /*w*/,h-gh*2 /*h*/);
+
 //			var gh = 50;
 //			var ww = DesktopContent.getWindowWidth();
 //			var wh = DesktopContent.getWindowHeight();
@@ -10002,7 +10007,9 @@
 
 			//set position and size
 			var gh = 50;
-			ConfigurationAPI.setPopUpPosition(el,500 /*w*/,335-gh*2 /*h*/);
+			var w = 500;
+			var h = 335;
+			ConfigurationAPI.setPopUpPosition(el,w /*w*/,h-gh*2 /*h*/);
 //			var w = 500;
 //			var h = 335;
 //			var gh = 50;
@@ -10224,7 +10231,9 @@
 			el.style.display = "none";
 
 			//set position and size
-			ConfigurationAPI.setPopUpPosition(el,300 /*w*/,220 /*h*/);
+			var w = 300;
+			var h = 220;
+			ConfigurationAPI.setPopUpPosition(el,w /*w*/,h /*h*/);
 //			var w = 300;
 //			var h = 220;
 //			var ww = DesktopContent.getWindowWidth();
@@ -10325,9 +10334,10 @@
 			el.style.display = "none";
 
 			//set position and size
-			ConfigurationAPI.setPopUpPosition(el,300 /*w*/,200 /*h*/);
-//			var w = 300;
-//			var h = 200;
+			var w = 300;
+			var h = 200;
+			ConfigurationAPI.setPopUpPosition(el,w /*w*/,h /*h*/);
+			
 //			var ww = DesktopContent.getWindowWidth();
 //			var wh = DesktopContent.getWindowHeight();
 //			el.style.top = (DesktopContent.getWindowScrollTop() + ((wh-h-2)/2)) + "px";
@@ -10540,7 +10550,9 @@
 			el.style.display = "none";
 
 			//set position and size
-			ConfigurationAPI.setPopUpPosition(el,380 /*w*/,305 /*h*/);
+			var w = 380;
+			var h = 305;
+			ConfigurationAPI.setPopUpPosition(el,w /*w*/,h /*h*/);
 //			var w = 380;
 //			var h = 305;
 //			var ww = DesktopContent.getWindowWidth();
