Latest bug fixes

--- a/WebGUI/html/MacroMaker.html
+++ b/WebGUI/html/MacroMaker.html
@@ -607,7 +607,7 @@
 		        	<button onclick="callRead()">Read</button>
 		        	<button onclick="callWrite()">Write</button>
 		        </div>
-		        <div class="buttonGroup">
+		        <div class="buttonGroup" style='margin-top:50px'>
 		        	<button onclick="showPopupClearHistoryConfirm()">Clear History</button>
 		        </div>
 		    </div>
