--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -530,7 +530,7 @@
 			//============================
 			//		for debugging
 			
-			setupSpecificConfig("FEConfiguration","0",""); return;
+			//setupSpecificConfig("FEConfiguration","0",""); return;
 			//setupSpecificConfig("XDAQContextConfiguration","10","setupTableViewMode('anchorTag-XDAQContextConfiguration');"); return;
 
 			//setupSpecificConfigGroup("artdaqFclTest","46","","anchorTag-RawDataSaverConsumerConfiguration"); return;			
